# vaccel-bindings

./: Cargo.toml
examples/torch_inference/: main.rs
src/: ffi.rs  profiling.rs  session.rs
src/ops/: genop.rs
src/resources/: mod.rs  shared_obj.rs
