[package]
name = "vaccel"
version = "0.5.5"
authors = ["Babis Chalios <mail@bchalios.io>", 
           "Kostis Papazafeiropoulos <papazof@gmail.com>", 
           "Anastassios Nanos <ananos@nubificus.co.uk",
           "George Pyrros <gpyrros@nubificus.co.uk",
           "Shenghao Qiu <shenghao@nubificus.co.uk"]
build = "build.rs"
edition.workspace = true
license.workspace = true

[lib]
name = "vaccel"
path = "src/lib.rs"

[dependencies]
protocols.workspace = true
protobuf.workspace = true
env_logger.workspace = true
log.workspace  = true
libc = "0.2.125"
rand = "0.8"

[build-dependencies]
libc = ">=0.2.39"
bindgen = "0.59.2"
pkg-config = "0.3.25"
cmake = "0.1.45"

[dev-dependencies]
env_logger.workspace = true
log.workspace  = true
utilities = { path = "utilities" }
